--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ function render(){
     const div = document.createElement("div");
     div.className="habit";
 
-    const doneToday = h.lastDate===today();
+    const doneToday = h.datesDone && h.datesDone.includes(today());
     const freeze = h.freeze===true;
 
     div.innerHTML = `
