--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Keepy - Keep Going</title>
-<link rel="icon" href="icon.png' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🔥</text></svg>">
+<link rel="icon" href="bro.jpg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🔥</text></svg>">
 
 <style>
 body {
@@ -393,4 +393,5 @@ render();
 
 </body>
 </html>
+
 
