Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ h2 {
 <body>
 
 <div class="header">
-  <img src="bro.jpg" class="mascot" id="mascot" alt="Keepy Mascot">
+  <img src="bro" class="mascot" id="mascot" alt="Keepy Mascot">
   <h1>Keepy</h1>
   <p class="motto">Keep Going</p>
   <h2>🔥 Moje passy</h2>
@@ -323,3 +323,4 @@ render();
 
 </body>
 </html>
+
